<resources>
    <string name="app_name">Proyecto PMDM</string>

    #Titulos
    <string name="crearPersonaje">CREA TU PERSONAJE</string>

    #Botones
    <string name="crear">CREAR</string>
    <string name="aplicar">APLICAR</string>
    <string name="jugar">JUGAR</string>
    <string name="volver">VOLVER</string>
    <string name="verPersonaje">VER PERSONAJE</string>
    <string name="crearMonstruo">CREAR MONSTRUO</string>
    <string name="pelear">PELEAR</string>
    <string name="comprar">COMPRAR</string>
    <string name="comerciar">COMERCIAR</string>
    <string name="vender">VENDER</string>
    <string name="comunicacion">COMUNICACION</string>

    #Variables
    <string name="nombre">Nickname: </string>
    <string name="clase">Clase: </string>
    <string name="raza">Raza: </string>
    <string name="estadoVital">Estado vital: </string>
    <string name="ataque">Ataque:</string>
    <string name="defensa">Defensa:</string>
    <string name="suerte">Suerte:</string>
    <string name="salud">Salud:</string>

    #Spinners
    <string-array name="Clase">
        <item></item>
        <item>Brujo</item>
        <item>Mago</item>
        <item>Guerrero</item>
    </string-array>
    <string-array name="Raza">
        <item></item>
        <item>Humano</item>
        <item>Elfo</item>
        <item>Enano</item>
        <item>Maldito</item>
    </string-array>
    <string-array name="EstadoVital">
        <item></item>
        <item>Joven</item>
        <item>Adulto</item>
        <item>Anciano</item>
    </string-array>

    #Avisos
    <string name="errorCampoVacio">Error: No puede haber campos vacíos.</string>
    <string name="continuar">CONTINUAR</string>
    <string name="recoger">RECOGER</string>
    <string name="luchar">LUCHAR</string>
    <string name="huir">HUIR</string>
    <string name="entrar">ENTRAR</string>
    <string name="tirar_dado">TIRAR DADO</string>
    <string name="menu_opciones">MENU OPCIONES</string>
    <string name="comienza_la_aventura_pulsa_el_dado_para_avanzar_cuidado_puedes_encontrarte_enemigos">Comienza la aventura, pulsa el DADO para avanzar. CUIDADO puedes encontrarte enemigos</string>
    <string name="objeto">OBJETO</string>
    <string name="mercader">MERCADER</string>
    <string name="ciudad">CIUDAD</string>
    <string name="enemigo">ENEMIGO</string>
    <string name="peso">Peso:</string>
    <string name="precio">Precio:</string>
    <string name="aumento_vida">Aumento vida:</string>
    <string name="aumento_defensa">Aumento defensa:</string>
    <string name="aumento_ataque">Aumento ataque:</string>
    <string name="mochila">MOCHILA</string>
    <string name="borrar">BORRAR</string>
    <string name="ver">VER</string>
    <string name="usar">USAR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signIn">SING IN</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="crea_tu_cuenta">CREA TU CUENTA</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="nickname">Nickname</string>
    <string name="seguir_jugando">SEGUIR JUGANDO</string>
    <string name="nombrem">Nombre:</string>
    <string name="nivel">Nivel:</string>
    <string name="guardar">GUARDAR</string>
    <string name="no_guardar">NO GUARDAR</string>
    <string name="guardar_cambios">¿Desea guardar los cambios antes de salir?</string>
    <string name="no_activar">NO ACTIVAR</string>
    <string name="activar">ACTIVAR</string>
    <string name="quieres_activar_tu_habilidad">¿Quieres activar tu habilidad?</string>
    <string name="volver_al_juego">Volver al juego</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>

</resources>

