<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuOpcionesActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnVerPersonaje"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/verPersonaje"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF" />


        <Button
            android:id="@+id/btnEnemigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/enemigo"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/btnCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/ciudad"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnMercader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/mercader"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnObjeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/objeto"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnMochila"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/mochila"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>