<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:background="#72131313">

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/guardar_cambios"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnGuardar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/guardar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnNoGuardar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/no_guardar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            />


    </LinearLayout>

</LinearLayout>
