<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral100"
    tools:context=".CrearPersonajeActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/crearPersonaje"
        android:textAlignment="center"
        android:textColor="@color/secundario"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="24dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:hint="Nickname"
        android:inputType="text"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAplicar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/secundario"
        android:elevation="2dp"
        android:shadowColor="#5C5C5C"
        android:text="@string/aplicar"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:rippleColor="#A11818"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/btnCrear"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#2196F3"
        android:elevation="2dp"
        android:shadowColor="#5C5C5C"
        android:text="@string/crear"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:rippleColor="#A11818"
        app:strokeColor="#FFFFFF"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnVolver"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#2196F3"
        android:elevation="2dp"
        android:text="@string/volver"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/btnCrear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:strokeColor="#FFFFFF"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:text="@string/clase"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="26dp"
        android:text="@string/raza"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="26dp"
        android:text="@string/estadoVital"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spnClase"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/secundario"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spnEstadoVital"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/secundario"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/spnRaza" />

    <Spinner
        android:id="@+id/spnRaza"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="@color/secundario"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/spnClase" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        tools:srcCompat="@drawable/personaje_en_blanco" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>