<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventos.EnemigoActivity"
    android:background="@drawable/background_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewEnemigo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/mounstro_coronavirus"
            android:layout_marginTop="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:text="@string/nombrem" />

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="60dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:text="@string/nivel" />

            <TextView
                android:id="@+id/textViewNivel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="60dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLuchar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/luchar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>
        <Button
            android:id="@+id/btnHuir"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="65dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/huir"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>